objects/EUR_CRM_OP_Action__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_MultiPLGeneralOrProductRT__c</fullName>
        <description>Genaral - Account in Promo 
Product - Visit Action
IMPOTANT: Seperation by &apos;,&apos;</description>
        <label>Selected Visit Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_MultiPLOpTarget__c</fullName>
        <description>fields from OP Target in Promo object
IMPOTANT: Seperation by &apos;,&apos;</description>
        <label>Selected Target/Quota Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_OP_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OP Template (EU)</label>
        <referenceTo>EUR_CRM_OP_Template__c</referenceTo>
        <relationshipLabel>OP Actions (EU)</relationshipLabel>
        <relationshipName>OP_Actions_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Parent_Action_Answer__c</fullName>
        <label>Parent Action Answer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Parent_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Action</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EUR_CRM_OP_Action__c.EUR_CRM_OP_Template__c</field>
                <operation>equals</operation>
                <valueField>$Source.EUR_CRM_OP_Template__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EUR_CRM_OP_Action__c</referenceTo>
        <relationshipLabel>OP Actions (EU)</relationshipLabel>
        <relationshipName>OP_Actions_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Reoccuring_Type__c</fullName>
        <label>Reoccuring Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Repeat until successful</fullName>
                </value>
                <value>
                    <fullName>Repeats until completed</fullName>
                </value>
                <value>
                    <fullName>Repeat all time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Selected_Field_for_Success__c</fullName>
        <label>Selected Field for Success</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Selected_Field_for_Unsuccess__c</fullName>
        <label>Selected Field for Unsuccess Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preparation</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Step_Order__c</fullName>
        <label>Step Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Successful_Status__c</fullName>
        <label>Successful Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OP Action (EU)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_MultiPLGeneralOrProductRT__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_DE_OP_Action</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_OP_Template__c</columns>
        <columns>EUR_CRM_Parent_Action__c</columns>
        <columns>EUR_CRM_Stage__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Wunderle,Zimmer,Hoffmann</value>
        </filters>
        <label>EUR DE OP Action</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_GB_OP_Action</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_OP_Template__c</columns>
        <columns>EUR_CRM_Parent_Action__c</columns>
        <columns>EUR_CRM_Stage__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>GBP</value>
        </filters>
        <label>EUR GB OP Action</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>OP Actions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OP Actions (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_CRM_General</fullName>
        <active>true</active>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_Product</fullName>
        <active>true</active>
        <label>Product</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EUR_CRM_Can_not_choose_the_same_action</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( Id  =  EUR_CRM_Parent_Action__r.Id , AND(ISCHANGED( EUR_CRM_Parent_Action__c ), Id = EUR_CRM_Parent_Action__r.Id))</errorConditionFormula>
        <errorMessage>You can not choose the same action in the OP Actions and the Parent Action fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Template_Product_Level</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(EUR_CRM_OP_Template__r.EUR_CRM_Product_Level__c))
 &amp;&amp;  RecordType.Name = &quot;Product&quot;</errorConditionFormula>
        <errorMessage>Please, choose product level in OP template</errorMessage>
    </validationRules>
</CustomObject>